looked at loops examples

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
       "filePath": "Module-2-HTML&CSS\\06-CSS-Flexbox&Grid\\exercises\\09-Pseudo-Elements",
       "group": "Default"
     }
-  ]
+  ],
+  "liveServer.settings.port": 5501
 }
