--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,10 @@
     {
       "filePath": "Module-2-HTML&CSS\\06-CSS-Flexbox&Grid\\exercises\\09-Pseudo-Elements",
       "group": "Default"
+    },
+    {
+      "filePath": "Module-08-Express\\examples\\03-Query-Params",
+      "group": "Default"
     }
   ],
   "liveServer.settings.port": 5501
